PAL-999 updated common code, resolved imports, checkstyle and SQ smells